src/components/main.css
/* ./components/main.css */

@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  font-family: 'Inter', -apple-system, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

html {
  margin-bottom: 15px;
}

body {
  margin: 1%;
  margin-bottom: auto;
}

.settingsFlex {
  margin: 4.25rem 0;
}
.settingsFlex > * {
  flex: 1 1 300px;
}

.usersFlex {
  margin: 4.25rem 0;
}

.usersFlex > * {
  flex: 1 1 300px;
}

.containerFlex {
  margin: 4.25rem 0;
}

.containerFlex > * {
  flex: 1 1 300px;
}

.metric-card {
  height: 100vh;
  margin: 4.25rem 0;
}

.alert {
  max-width: 98%;
  opacity: 92.5%;
  margin: auto;
  margin-top: 5px;
}

